# perps-demo

./: Anchor.toml  README.md  perp-demo.json
programs/perps-demo/: Cargo.toml
programs/perps-demo/src/: error.rs  instructions.rs  lib.rs  math.rs  state.rs
programs/perps-demo/src/instructions/: add_liquidity.rs  add_pool.rs  add_token.rs  close_position.rs  init.rs  liquidate.rs  open_position.rs  remove_liquidity.rs  set_test_oracle_price.rs  swap.rs
programs/perps-demo/src/state/: custody.rs  oracle.rs  perpetuals.rs  pool.rs  position.rs
tests/: basic.ts  test_client.ts
