[package]
name = "perps-demo"
version = "0.1.0"
description = "Solana Perpetuals Exchange Demo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/askibin/perps-demo"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perps_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
solana-program = "1.10.41"
pyth-sdk-solana = "0.6.1"
num-traits = "0.2.15"
num = "0.4.0"